<resources>
    <string name="app_name">RecyclerViewDemo</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_name">Add New Name</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="enter_names_error_message">Please enter first and last names.</string>
    <string name="invalid_names_error_message">Invalid names only alphabet allowed </string>
</resources>
