<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zta.recyclerviewdemo.Fragments.AddNewNameDialogFragment">


    <TextView
        android:id="@+id/tv_add_new_name_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/add_new_name"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/ll_add_first_name"
        android:layout_below="@id/tv_add_new_name_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center|center_vertical"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_first_name_label"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/first_name"/>

        <EditText
            android:id="@+id/edt_first_name"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_add_second_name"
        android:layout_below="@id/ll_add_first_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center|center_vertical"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_last_name_label"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/last_name"/>

        <EditText
            android:id="@+id/edt_last_name"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_below="@id/ll_add_second_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/btn_add"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/colorAccent"/>


       </LinearLayout>


</RelativeLayout>
